fix button spacing issues from merge

--- a/frontend/src/components/playlist/playlist_css/delete-playlist-modal.css
+++ b/frontend/src/components/playlist/playlist_css/delete-playlist-modal.css
@@ -14,7 +14,7 @@
     font-size: 20px;
 }
 
-.buttons {
+.delete-modal-buttons {
     width: 80%;
     display: flex;
     align-content: flex-start;
